src/app/dashboard/widgets/change-shift/change-shift.component.scss
%circle {
  width: 4px;
  height: 4px;
  border: 0.5px solid var(--color-border-main-transparrent);
  background-color: black;
  border-radius: 50%;
  position: absolute;
  top: 100%;
  box-sizing: border-box;
}

:host {
  position: relative;
  display: block;
  height: 100%;
  width: 100%;
}

.container {
  position: relative;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  padding: 5px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
}

.header {
  position: relative;
  height: 30px;
  width: 99%;
  box-sizing: border-box;

  background-color: var(--color-bg-additional);

  &__content {
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
  }

  &__icon-wrapper {
    display: flex;
    align-items: center;

    min-width: 44px;
    height: 100%;
    background-color: var(--color-bg-sub);
    padding: 9px 15px;
    margin-right: 10px;
    box-sizing: border-box;

    font-weight: bold;
  }

  &__name {
    font-size: 0.875rem;
  }

  &__units {
    margin: auto;
    margin-right: 10px;

    justify-self: flex-end;
    font-size: 0.75rem;
    color: var(--color-text-sub);
  }

  &:before {
    z-index: 1;
    content: "";
    position: absolute;

    top: -4px;
    left: -1px;

    height: 9px;
    width: 9px;
    box-sizing: border-box;

    transform-origin: 43% 0;
    transform: rotate(45deg);

    background: var(--color-bg-main);
  }

  &:after {
    z-index: 1;
    content: "";
    position: absolute;
    top: -2px;
    right: -1px;

    height: 7px;
    width: 7px;
    box-sizing: border-box;
    transform-origin: 43% 0;
    transform: rotate(-45deg);

    background: var(--color-bg-main);
  }
}

.frame {
  width: 100%;
  height: 28px;
  min-width: 430px;

  border: 0.5px solid var(--color-border-main-transparrent);
  border-bottom: transparent;
  position: relative;

  &__circle {
    @extend %circle;
    &__left {
      left: -2.5px;
    }

    &__right {
      right: -2.5px;
    }
  }

  &_top {
    &:after {
      z-index: 1;
      content: "";
      position: absolute;
      top: -3px;
      right: -1px;

      height: 7px;
      width: 7px;
      box-sizing: border-box;
      transform-origin: 43% 0;
      transform: rotate(-45deg);

      border-left: 0.5px solid var(--color-border-main-transparrent);

      background: var(--color-bg-main);
    }
  }

  &_bottom {
    // position: absolute;
    bottom: 0;
    border-bottom: 0.5px solid var(--color-border-main-transparrent);
    border-top: transparent;

    &:after {
      z-index: 1;
      content: "";
      position: absolute;

      bottom: -5px;
      right: -1px;

      height: 7px;
      width: 7px;

      box-sizing: border-box;
      transform-origin: 43% 0;
      transform: rotate(-45deg);

      border-top: 0.5px solid var(--color-border-main-transparrent);
      background: var(--color-bg-main);
    }

    &:before {
      z-index: 1;
      content: "";
      position: absolute;

      bottom: -3px;
      left: -1px;

      height: 6px;
      width: 6px;

      box-sizing: border-box;
      transform-origin: 43% 0;
      transform: rotate(45deg);

      border-top: 0.5px solid var(--color-border-main-transparrent);
      background: var(--color-bg-main);
    }
  }

  &_bottom &__circle {
    top: 0;
  }
}

.change-shift {
  font-family: Tahoma, sans-serif;
  font-size: 12px;
  font-weight: 100;
  color: var(--color-text-sub);
  width: 100%;
  height: 100%;
  padding: 0 25px;
  margin: 5px 0 2px;
  box-sizing: border-box;
  border-right: 0.5px dashed var(--color-border-main-transparrent);
  border-left: 0.5px dashed var(--color-border-main-transparrent);

  &__mainWorker {
    width: 100%;
    display: inline-flex;
    justify-content: space-between;
    align-items: center;
    border-top: 0.5px solid var(--color-border-main-transparrent);
    box-sizing: border-box;
    padding-top: 10px;
    position: relative;
    height: 25%;
    margin-bottom: 25px;

    .mainWorker {
      &__avatar {
        flex-basis: 40%;
        height: 100%;
        box-sizing: border-box;
        border-bottom: 0.5px solid var(--color-border-main-transparrent);
        position: relative;
      }

      &__img {
        width: 104.62px;
        height: 104.62px;
        border-radius: 50%;
        margin: 0 auto;
        background-color: #333333;
      }

      &__info {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        height: 100%;
        flex-basis: 60%;
      }

      &__row {
        display: inline-flex;
        align-items: center;
        justify-content: space-between;
        &_colIcon {
          width: 35px;
          height: 35px;
          border-radius: 50%;
          background-color: #333333;
        }

        &:last-child {
          border-top: 0.5px solid var(--color-border-main-transparrent);
          border-bottom: 0.5px solid var(--color-border-main-transparrent);
          box-sizing: border-box;
          padding-top: 5px;
          position: relative;

          &:after {
            z-index: 1;
            content: "";
            position: absolute;

            bottom: -20px;
            right: -5px;

            height: 30px;
            width: 30px;

            box-sizing: border-box;
            transform-origin: 43% 0;
            transform: rotate(-45deg);

            border-top: 0.5px solid var(--color-border-main-transparrent);
            background: var(--color-bg-main);
          }

          &:before {
            z-index: 1;
            content: "";
            position: absolute;

            top: 26px;
            left: -56px;

            height: 1px;
            width: 67px;

            box-sizing: border-box;
            transform-origin: 43% 0;
            transform: rotate(-45deg);

            border-bottom: 0.5px solid var(--color-border-main-transparrent);
            background: transparent;
          }
        }
      }

      &__name {
        font-size: 20px; //?
        color: var(--color-text-main);
        margin-bottom: 15px;
      }

      &__position {
        font-size: 16px;
      }

      &__squad {
        font-size: 20px;
      }

      &__number {
        font-size: 42px;
        font-weight: bold;
        line-height: 100%;
        margin-right: 15%;
      }
    }
  }

  &__onShift {
    width: 100%;
    height: 20%;
    border-top: 0.5px solid var(--color-border-main-transparrent);
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    position: relative;
    box-sizing: border-box;
    padding-top: 15px;

    .onShift {
      &__label {
        position: absolute;
        top: -8px;
        left: 0;
        padding-right: 10px;
        background-color: var(--color-bg-main);
      }

      &__people {
        width: 100%;
        height: 100%;
        display: inline-flex;
        flex-wrap: wrap;
        justify-content: space-between;
      }

      &__person {
        width: 140px;
        height: 70px;
        margin-top: 20px;
        display: inline-flex;
        position: relative;
        border-top: 0.5px dashed var(--color-border-main-transparrent);
        font-size: 7px;
        box-sizing: border-box;
        padding-top: 5px;

        .person {
          display: flex;
          &__avatar {
            flex-basis: 40%;
            height: 100%;
            display: flex;
            flex-direction: column;
            justify-content: center;
            align-items: left;
            box-sizing: border-box;
            border-bottom: 0.5px dashed var(--color-border-main-transparrent);
            position: relative;

            &:before {
              z-index: 1;
              content: "";
              position: absolute;

              bottom: -2px;
              right: 0px;

              height: 2px;
              width: 13px;

              box-sizing: border-box;
              background: var(--color-bg-main);
            }
          }

          &__img {
            width: 50px;
            height: 50px;
            border-radius: 50%;
            background-color: #333333;
          }

          &__info {
            flex-basis: 60%;
            height: 100%;
            display: flex;
            flex-direction: column;
            justify-content: space-between;
          }

          &__name {
            color: var(--color-text-main);
            font-size: 9px;
          }

          &__position {
            color: var(--color-text-sub);
          }

          &__place {
            color: var(--color-text-sub-heading);
          }

          &__status {
            display: inline-flex;
            justify-content: space-between;
            box-sizing: border-box;
            padding-top: 3px;
            border-top: 0.5px dashed var(--color-border-main-transparrent);
            position: relative;

            &:before {
              z-index: 1;
              content: "";
              position: absolute;

              top: 7px;
              left: -18px;

              height: 1px;
              width: 20px;

              box-sizing: border-box;
              transform-origin: 43% 0;
              transform: rotate(-40deg);

              border-bottom: 0.5px dashed var(--color-border-main-transparrent);
              background: transparent;
            }

            .status {
              &__name {
                color: var(--color-text-main);
              }
              &__icon {
                width: 10px;
                height: 10px;
                border-radius: 50%;
                background-color: #333333;
              }
            }
          }
        }
      }
    }
  }
}

.circle {
  @extend %circle;
  &__left {
    left: -2.5px;

    &-top {
      top: -2.5px;
    }
    &-bottom {
      bottom: 0px;
    }
  }

  &__right {
    right: -2.5px;

    &-top {
      top: -2.5px;
    }
    &-bottom {
      bottom: 5px;
    }
  }
}

